src/components/Nav/Nav.css
.nav-bar {
    position: fixed;
    left: 0;
    display: grid;
    grid-template-columns: 3.6;
    grid-template-rows: repeat(7, 6em);
    height: 100%;
    width: 6.5em;
    background-color: #b6a59b ;
    box-shadow: -2px 0px 5px 0px rgb(105, 102, 102);
    z-index: 1;
  }

.pork-icon-container {
  padding-top: .5em;
}

.sheep-icon-container {
  padding-top: 1em;
}

.other-icon-container {
  padding-top: 1.5em;
}

.nav-icon {
  width: 6em;
}

.gen-invoice-icon-container {
  width: 5.5em;
  padding-top: 1.8em;
}
.search-icon {
  width: 5.3em;
  /* padding-top: 3em; */
  padding-left: .4em;
}

.search-icon-container {
  padding-top: 2.2em;
}

.settings-icon-container {
  /* margin-top: 3.2em; */
  /* margin-left: .2em; */
  padding-top: 2.4em;
}

 
.settings-icon {
  padding-left: .4em;
  width: 5.5em;
} 

